SERVER-16013 Wrap WiredTiger callbacks called from C in try-catch blocks.